--- a/frontend_angular/src/assets/i18n/en.json
+++ b/frontend_angular/src/assets/i18n/en.json
@@ -5,5 +5,6 @@
     "Remedies":"Remedies",
     "Biological":"Biological",
     "Chemical":"Chemical",
-    "Prevention":"Prevention"
+    "Prevention":"Prevention",
+    "Probability":"Probability"
 }
