Added additional translations

--- a/frontend_angular/src/assets/i18n/en.json
+++ b/frontend_angular/src/assets/i18n/en.json
@@ -6,5 +6,7 @@
     "Biological":"Biological",
     "Chemical":"Chemical",
     "Prevention":"Prevention",
-    "Probability":"Probability"
+    "Probability":"Probability",
+    "Suggestions":"Suggestions",
+    "HealthyLeafMsg":"Looks healthy but there is a possibility of getting below disease"
 }
