--- a/frontend_angular/src/assets/i18n/hi.json
+++ b/frontend_angular/src/assets/i18n/hi.json
@@ -8,5 +8,7 @@
     "Prevention":"रोकथाम",
     "Probability":"संभावना",
     "Suggestions":"सुझाव",
-    "HealthyLeafMsg":"स्वस्थ दिख रहे हैं लेकिन रोग से नीचे होने की आशंका है"
+    "HealthyLeafMsg":"पौधे के स्वस्थ होने की संभावना:",
+    "SuggestionMsg":"निम्न रोग होने की थोड़ी संभावना है, इससे बचने के लिए कृपया नीचे दिए गए आवश्यक निवारक उपायों का पालन करें",
+    "UnhealthyMsg":"पत्ती अस्वस्थ लग रही है नीचे रोग का विवरण दिया गया है कृपया रोग को ठीक करने के लिए चरणों का पालन करें"
 }
